fix nav links when clicked on mobiles

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,6 @@ body {
 /* end of general rules */
 #navbar__list{
     height: 60px;
-    background-color: #fff;
     background: linear-gradient(25deg,rgba(68, 0, 255,1)0%,rgba(255,50,50,1)10%,rgba(68, 0, 255,1)20%,rgba(255,50,50,1)30%,
     rgba(68, 0, 255,1)45%, rgba(255,50,50,1)60%,rgba(68, 0, 255,1)75%);
     opacity: 1;
@@ -366,7 +365,7 @@ section.activeClass .landing__container::after {
         top: 0em;
         right: 0em;
         display: block;
-        background-color: wheat;
+        background: wheat;
         height: 100vh;
         z-index: -1;
         transition: 0.4s;
